--- a/index.html
+++ b/index.html
@@ -496,7 +496,6 @@
                 <a class="chip" href="#about" data-i18n="nav_about">概要</a>
                 <a class="chip" href="#pubs" data-i18n="nav_pubs">論文</a>
                 <a class="chip" href="#career" data-i18n="nav_career">経歴</a>
-                <!-- ★変更：受賞は手書きセクションを消すので、Publications内のAwardへ飛ばす -->
                 <a class="chip" href="#pub-awards" data-i18n="nav_awards">受賞</a>
                 <a class="chip" href="#projects" data-i18n="nav_projects">プロジェクト</a>
                 <a class="chip" href="#contact" data-i18n="nav_contact">連絡先</a>
@@ -553,7 +552,7 @@
                         <div class="label" data-i18n="box_now_label">現在</div>
                         <div class="value" data-i18n="box_now_value">助教 / 広島市立大学（2025.04–）</div>
                         <div class="muted" style="margin-top:6px" data-i18n="box_now_work">
-                            研究：<span class="mono">mobile computing · sensing</span>
+                            研究: <span class="mono">モバイルコンピューティング，センシング</span>
                         </div>
                     </div>
 
@@ -587,15 +586,15 @@
                 </div>
 
                 <p data-i18n="bio_p">
-                    2020年大阪大学工学部電子情報工学科卒業，2022年同大学院情報科学研究科博士前期課程修了，2025年同博士後期課程修了（博士（情報科学））．
-                    2022–2025年日本学術振興会特別研究員（DC1）．2024年4月〜9月，コペンハーゲン大学客員研究員（JSPS 若手研究者海外挑戦プログラム）．
-                    2025年4月より広島市立大学大学院情報科学研究科 助教．モバイルコンピューティング，センシングに関する研究に従事．
+                    2020.03 大阪大学工学部電子情報工学科卒業，2022.03 同大学院情報科学研究科博士前期課程修了，2025.03 同博士後期課程修了．博士 (情報科学)．
+                    2022.04–2025.03 JSPS特別研究員 (DC1)．2024.04--2024.09 コペンハーゲン大学客員研究員 (JSPS 若手研究者海外挑戦プログラム)．
+                    2025.04–広島市立大学大学院情報科学研究科 助教．モバイルコンピューティング，センシングに関する研究に従事．
                 </p>
 
                 <div class="meta">
-                    <span data-i18n="bio_interest">所属：広島市立大学 大学院情報科学研究科</span>
+                    <span data-i18n="bio_interest">所属: 広島市立大学 大学院情報科学研究科</span>
                     <span>•</span>
-                    <a href="./cv.pdf" data-i18n="bio_cv">履歴書（PDF）</a>
+                    <a href="./cv.pdf" data-i18n="bio_cv">履歴書 (PDF)</a>
                     <a href="https://orcid.org/0000-0002-6418-3964" target="_blank" rel="noreferrer">ORCID</a>
                     <a href="#contact" data-i18n="bio_contact">連絡</a>
                 </div>
@@ -635,7 +634,6 @@
                     <ol class="pubList" id="pub-domestic"></ol>
                 </div>
 
-                <!-- ★変更：ここに id を付けてナビから飛べるように -->
                 <div class="pubGroup" id="pub-awards">
                     <h3>Award</h3>
                     <ol class="pubList" id="pub-award"></ol>
@@ -670,43 +668,47 @@
                     <div>
                         <div class="label" data-i18n="career_edu">学歴・職歴</div>
                         <ul class="clean" data-i18n="career_edu_list">
-                            <li>2025.04–　広島市立大学 大学院情報科学研究科 助教</li>
-                            <li>2022.04–2025.03　大阪大学大学院情報科学研究科 博士後期課程</li>
-                            <li>2022.04–2025.03　日本学術振興会特別研究員（DC1）</li>
-                            <li>2024.04–2024.09　コペンハーゲン大学 客員研究員（JSPS 若手研究者海外挑戦プログラム）</li>
-                            <li>2022.04–2023.03　京都女子高等学校 非常勤講師（情報I）</li>
-                            <li>2021.05–2022.03　シスメックス株式会社 学生研究員</li>
-                            <li>2022.03　大阪大学大学院情報科学研究科 博士前期課程 修了</li>
-                            <li>2020.03　大阪大学工学部電子情報工学科 卒業</li>
+                            <li>2025.04– 広島市立大学 大学院情報科学研究科 助教</li>
+                            <li>2022.04–2025.03 大阪大学大学院情報科学研究科 博士後期課程</li>
+                            <li>2022.04–2025.03 日本学術振興会特別研究員 (DC1)</li>
+                            <li>2024.04–2024.09 コペンハーゲン大学 客員研究員 (JSPS 若手研究者海外挑戦プログラム)</li>
+                            <li>2022.04–2023.03 京都女子高等学校 非常勤講師 (情報I)</li>
+                            <li>2021.05–2022.03 シスメックス株式会社 学生研究員</li>
+                            <li>2022.03 大阪大学大学院情報科学研究科 博士前期課程 修了</li>
+                            <li>2020.03 大阪大学工学部電子情報工学科 卒業</li>
                         </ul>
                     </div>
 
                     <div>
+                        <div class="label" data-i18n="career_class">担当授業</div>
+                        <ul class="clean" data-i18n="career_class_list">
+                            <li>2025.04– 広島市立大学情報科学部 情報工学実験I・II・III・IV</li>
+                            <li>2025.04–2025.09 広島市立大学情報科学部 解析学演習IA・IB</li>
+                        </ul>
+
                         <div class="label" data-i18n="career_service">学会活動・諸活動</div>
                         <ul class="clean" data-i18n="career_service_list">
-                            <li>2023.06　大学教育学会 第45回大会 運営補助</li>
-                            <li>2021.03　情報処理学会 第83回全国大会 運営補助</li>
-                            <li>2020.06　情報処理学会 DICOMO2020 シンポジウム 運営補助</li>
-                            <li>2021.12–　大阪大学SEEDSプログラム ティーチングアシスタント（TA）</li>
-                            <li>2017.06–　大阪大学工学部公式ブログ「阪大工学部の散歩道」執筆担当</li>
-                            <li>2023.04–2023.09　確率統計 ティーチングフェロー（TF）（2023年度春・夏学期）</li>
-                            <li>2022.04–2022.09　確率統計 ティーチングフェロー（TF）（2022年度春・夏学期）</li>
+                            <li>2023.06 大学教育学会 第45回大会 運営補助</li>
+                            <li>2021.03 情報処理学会 第83回全国大会 運営補助</li>
+                            <li>2020.06 情報処理学会 DICOMO2020 シンポジウム 運営補助</li>
+                            <li>2021.12– 大阪大学SEEDSプログラム ティーチングアシスタント (TA)</li>
+                            <li>2017.06– 大阪大学工学部公式ブログ「阪大工学部の散歩道」執筆担当</li>
+                            <li>2023.04–2023.09 確率統計 ティーチングフェロー (TF) (2023年度春・夏学期)</li>
+                            <li>2022.04–2022.09 確率統計 ティーチングフェロー (TF) (2022年度春・夏学期)</li>
                         </ul>
 
                         <div class="label" style="margin-top:12px" data-i18n="career_qual">資格等</div>
                         <ul class="clean" data-i18n="career_qual_list">
-                            <li>2024.03　高度副プログラム 未来の大学教員養成プログラム 修了</li>
-                            <li>2022.03　高等学校教諭一種免許状（数学・情報）取得</li>
-                            <li>2021.06　TOEIC Listening &amp; Reading 815点</li>
-                            <li>2019.03　enPiT-Security（SecCap 8）修了</li>
-                            <li>2017.11　普通自動車運転免許（AT限定）取得</li>
+                            <li>2024.03 高度副プログラム 未来の大学教員養成プログラム 修了</li>
+                            <li>2022.03 高等学校教諭一種免許状（数学・情報）取得</li>
+                            <li>2021.06 TOEIC Listening &amp; Reading 815点</li>
+                            <li>2019.03 enPiT-Security (SecCap 8) 修了</li>
+                            <li>2017.11 普通自動車運転免許 (AT限定) 取得</li>
                         </ul>
                     </div>
                 </div>
             </div>
         </section>
-
-        <!-- ★削除：べた打ちの受賞歴セクション（section id="awards"）は完全に消しました -->
 
         <section id="projects">
             <div class="sectionHead">
@@ -834,7 +836,7 @@
                     link_researchmap: "Researchmap",
                     box_now_label: "Now",
                     box_now_value: "Assistant Professor / Hiroshima City University (since Apr 2025)",
-                    box_now_work: "Working on: <span class=\"mono\">mobile computing · sensing</span>",
+                    box_now_work: "Working on: <span class=\"mono\">mobile computing, sensing</span>",
                     box_hi_label: "Highlight",
                     box_hi_value: "LAK '25 Best Short Paper Award",
                     box_hi_meta: "2025 · Learning Analytics & Knowledge",
@@ -855,6 +857,8 @@
                     career_title: "Timeline",
                     career_edu: "Education & positions",
                     career_edu_list: "<li>Apr 2025– : Assistant Professor, Hiroshima City University</li><li>Apr 2022–Mar 2025 : Ph.D. program, Graduate School of Information Science and Technology, Osaka University</li><li>Apr 2022–Mar 2025 : JSPS Research Fellow (DC1)</li><li>Apr 2024–Sep 2024 : Visiting Scholar, University of Copenhagen (JSPS Overseas Challenge Program for Young Researchers)</li><li>Apr 2022–Mar 2023 : Part-time lecturer (Information I), Kyoto Women's High School</li><li>May 2021–Mar 2022 : Student researcher, Sysmex Corporation</li><li>Mar 2022 : M.E., Osaka University</li><li>Mar 2020 : B.E., Osaka University</li>",
+                    career_class: "Courses taught",
+                    career_class_list: "<li>Apr 2025– : Information Engineering Lab I, II, III, IV, Hiroshima City University</li><li>Apr–Sep 2025: Exercises in Mathematical Analysis IA, IB, Hiroshima City University</li>",
                     career_service: "Service & activities",
                     career_service_list: "<li>Jun 2023: Staff, JACUE 45th Annual Meeting</li><li>Mar 2021: Staff, IPSJ 83rd National Convention</li><li>Jun 2020: Staff, IPSJ DICOMO 2020 Symposium</li><li>Since Dec 2021: TA, Osaka University SEEDS program</li><li>Since Jun 2017: Writer, Osaka University engineering blog</li><li>Apr–Sep 2023: Teaching Fellow, Probability & Statistics</li><li>Apr–Sep 2022: Teaching Fellow, Probability & Statistics</li>",
                     career_qual: "Qualifications",
