--- a/index.html
+++ b/index.html
@@ -691,8 +691,8 @@
                             <li>2023.06 大学教育学会 第45回大会 運営補助</li>
                             <li>2021.03 情報処理学会 第83回全国大会 運営補助</li>
                             <li>2020.06 情報処理学会 DICOMO2020 シンポジウム 運営補助</li>
-                            <li>2021.12– 大阪大学SEEDSプログラム ティーチングアシスタント (TA)</li>
-                            <li>2017.06– 大阪大学工学部公式ブログ「阪大工学部の散歩道」執筆担当</li>
+                            <li>2021.12–2025.03 大阪大学SEEDSプログラム ティーチングアシスタント (TA)</li>
+                            <li>2017.06–2025.03 大阪大学工学部公式ブログ「阪大工学部の散歩道」執筆担当</li>
                             <li>2023.04–2023.09 確率統計 ティーチングフェロー (TF) (2023年度春・夏学期)</li>
                             <li>2022.04–2022.09 確率統計 ティーチングフェロー (TF) (2022年度春・夏学期)</li>
                         </ul>
@@ -860,7 +860,7 @@
                     career_class: "Courses taught",
                     career_class_list: "<li>Apr 2025– : Information Engineering Lab I, II, III, IV, Hiroshima City University</li><li>Apr–Sep 2025: Exercises in Mathematical Analysis IA, IB, Hiroshima City University</li>",
                     career_service: "Service & activities",
-                    career_service_list: "<li>Jun 2023: Staff, JACUE 45th Annual Meeting</li><li>Mar 2021: Staff, IPSJ 83rd National Convention</li><li>Jun 2020: Staff, IPSJ DICOMO 2020 Symposium</li><li>Since Dec 2021: TA, Osaka University SEEDS program</li><li>Since Jun 2017: Writer, Osaka University engineering blog</li><li>Apr–Sep 2023: Teaching Fellow, Probability & Statistics</li><li>Apr–Sep 2022: Teaching Fellow, Probability & Statistics</li>",
+                    career_service_list: "<li>Jun 2023: Staff, JACUE 45th Annual Meeting</li><li>Mar 2021: Staff, IPSJ 83rd National Convention</li><li>Jun 2020: Staff, IPSJ DICOMO 2020 Symposium</li><li>Dec 2021–Mar 2025: TA, Osaka University SEEDS program</li><li>Jun 2017–Mar 2025: Writer, Osaka University engineering blog</li><li>Apr–Sep 2023: Teaching Fellow, Probability & Statistics</li><li>Apr–Sep 2022: Teaching Fellow, Probability & Statistics</li>",
                     career_qual: "Qualifications",
                     career_qual_list: "<li>Mar 2024: Completed Advanced Sub-Program (Faculty Development)</li><li>Mar 2022: Secondary school teaching license (Math/Information)</li><li>Jun 2021: TOEIC L&amp;R 815</li><li>Mar 2019: Completed enPiT-Security (SecCap 8)</li><li>Nov 2017: Driver’s license (AT)</li>",
                     projects_h2: "Projects",
