--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
             <nav aria-label="Primary">
                 <a class="chip" href="#pubs" data-i18n="nav_pubs">論文</a>
                 <a class="chip" href="#career" data-i18n="nav_career">経歴</a>
-                <a class="chip" href="#pub-awards" data-i18n="nav_awards">受賞</a>
+                <a class="chip" href="#pub-journal" data-i18n="nav_career">業績</a>
                 <a class="chip" href="#projects" data-i18n="nav_projects">プロジェクト</a>
                 <a class="chip" href="#contact" data-i18n="nav_contact">連絡先</a>
             </nav>
