--- a/index.html
+++ b/index.html
@@ -493,9 +493,8 @@
             </div>
 
             <nav aria-label="Primary">
-                <a class="chip" href="#pubs" data-i18n="nav_pubs">論文</a>
                 <a class="chip" href="#career" data-i18n="nav_career">経歴</a>
-                <a class="chip" href="#pub-journal" data-i18n="nav_career">業績</a>
+                <a class="chip" href="#pubs" data-i18n="nav_pubs">業績</a>
                 <a class="chip" href="#projects" data-i18n="nav_projects">プロジェクト</a>
                 <a class="chip" href="#contact" data-i18n="nav_contact">連絡先</a>
             </nav>
