--- a/index.html
+++ b/index.html
@@ -593,6 +593,7 @@
                             <li>2021.05–2022.03 シスメックス株式会社 学生研究員</li>
                             <li>2022.03 大阪大学大学院情報科学研究科 博士前期課程 修了</li>
                             <li>2020.03 大阪大学工学部電子情報工学科 卒業</li>
+                            <li>2016.03 大阪教育大学附属高等学校天王寺校舎 卒業</li>
                         </ul>
                     </div>
 
@@ -817,13 +818,13 @@
                     career_hint: "Selected positions and services",
                     career_title: "Timeline",
                     career_edu: "Education & positions",
-                    career_edu_list: "<li>Apr 2025– : Assistant Professor, Hiroshima City University</li><li>Apr 2022–Mar 2025 : Ph.D. program, Graduate School of Information Science and Technology, Osaka University</li><li>Apr 2022–Mar 2025 : JSPS Research Fellow (DC1)</li><li>Apr 2024–Sep 2024 : Visiting Scholar, University of Copenhagen (JSPS Overseas Challenge Program for Young Researchers)</li><li>Apr 2022–Mar 2023 : Part-time lecturer (Information I), Kyoto Women's High School</li><li>May 2021–Mar 2022 : Student researcher, Sysmex Corporation</li><li>Mar 2022 : M.E., Osaka University</li><li>Mar 2020 : B.E., Osaka University</li>",
+                    career_edu_list: "<li>Apr 2025–: Assistant Professor, Hiroshima City University</li><li>Apr 2022–Mar 2025: Ph.D. program, Graduate School of Information Science and Technology, Osaka University</li><li>Apr 2022–Mar 2025: JSPS Research Fellow (DC1)</li><li>Apr 2024–Sep 2024: Visiting Scholar, University of Copenhagen (JSPS Overseas Challenge Program for Young Researchers)</li><li>Apr 2022–Mar 2023: Part-time lecturer (Information I), Kyoto Women's High School</li><li>May 2021–Mar 2022: Student researcher, Sysmex Corporation</li><li>Mar 2022: M.E., Osaka University</li><li>Mar 2020: B.E., Osaka University</li><li>Mar 2016: Graduated from High School Attached to Osaka Kyoiku University (Tennoji Campus)</li>",
                     career_class: "Courses taught",
-                    career_class_list: "<li>Apr 2025– : Information Engineering Lab I, II, III, IV, Hiroshima City University</li><li>Apr–Sep 2025: Exercises in Mathematical Analysis IA, IB, Hiroshima City University</li>",
+                    career_class_list: "<li>Apr 2025–: Information Engineering Lab I, II, III, IV, Hiroshima City University</li><li>Apr–Sep 2025: Exercises in Mathematical Analysis IA, IB, Hiroshima City University</li>",
                     career_service: "Service & activities",
                     career_service_list: "<li>Jun 2023: Staff, JACUE 45th Annual Meeting</li><li>Mar 2021: Staff, IPSJ 83rd National Convention</li><li>Jun 2020: Staff, IPSJ DICOMO 2020 Symposium</li><li>Dec 2021–Mar 2025: TA, Osaka University SEEDS program</li><li>Jun 2017–Mar 2025: Writer, Osaka University engineering blog</li><li>Apr–Sep 2023: Teaching Fellow, Probability & Statistics</li><li>Apr–Sep 2022: Teaching Fellow, Probability & Statistics</li>",
                     career_qual: "Qualifications",
-                    career_qual_list: "<li>Mar 2024: Completed Advanced Sub-Program (Faculty Development)</li><li>Mar 2022: Secondary school teaching license (Math/Information)</li><li>Jun 2021: TOEIC L&amp;R 815</li><li>Mar 2019: Completed enPiT-Security (SecCap 8)</li><li>Nov 2017: Driver’s license (AT)</li>",
+                    career_qual_list: "<li>Mar 2024: Completed Advanced Sub-Program (Faculty Development)</li><li>Mar 2022: Secondary school teaching license (Math/Information)</li><li>Jun 2021: TOEIC L&amp;R 815</li><li>Mar 2019: Completed enPiT-Security (SecCap 8)</li><li>Nov 2017: Driver's license (AT)</li>",
                     projects_h2: "Projects",
                     projects_hint: "Add as needed",
                     proj_name: "(Example) Wi-Fi sensing × AR",
